<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kii.demo.wearable.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_startstop_watch"
        android:title="@string/action_startstop_watch"
        android:orderInCategory="200"
        android:showAsAction="never" />
    <item android:id="@+id/action_startstop_service"
        android:title="@string/action_startstop_service"
        android:orderInCategory="400"
        android:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="600"
        android:showAsAction="never" />
</menu>
